fixed padding right on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -95,7 +95,7 @@ input[type="text"]{
 /*FOOTER----------------------------------*/
 footer {
     background-color: #281837;
-    padding: 20px;
+    padding: 1rem 0 1rem 0;
     text-align: center;
     font-size: 14px;
     color: #ffffff;
@@ -176,5 +176,9 @@ a:active {
     }
     td {
         padding: 0rem 0.5rem 0rem 0.5rem;
+    }
+
+    footer {
+        padding: 1rem 0 1rem 0;
     }
 }
