--- a/static/submit.css
+++ b/static/submit.css
@@ -485,4 +485,8 @@ a:active {
     #board {
         display: none;
     }
+
+    footer {
+        padding: 1rem 0 1rem 0;
+    }
 }
